--- a/.github/workflows/build-apk-acode.yml
+++ b/.github/workflows/build-apk-acode.yml
@@ -1,12 +1,12 @@
 name: build-apk-acode
-
+ 
 on:
   workflow_dispatch:
   workflow_call:
-
+ 
 permissions:
   contents: write
-
+ 
 env:
   GITHUB_TOKEN: "${{secrets.GITHUB_TOKEN}}"
   BUILD_JSON_PATH: "./build.json"
@@ -14,25 +14,26 @@ env:
   KEYSTORE_PASSWORD: "${{secrets.KEYSTORE_PASSWORD}}"
   KEY_ALIAS: "${{secrets.KEY_ALIAS}}"
   KEY_PASSWORD: "${{secrets.KEY_PASSWORD}}"
-
+ 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Clean runner environment
         run: |
-          # 清理 Android/Gradle 缓存
-          rm -rf ~/.gradle/caches/transforms-*
+          rm -rf ~/.gradle/caches/
+          rm -rf ~/.gradle/daemon/
           rm -rf ~/.android/build-cache/
+          rm -rf .gradle
           # 清理 Node.js/npm 缓存
           rm -rf ~/.npm/
           rm -rf ~/.cordova/
           rm -rf ~/.cache/
-          # 清理项目内的 node_modules（如果存在）
+          # 清理 node_modules
           if [ -d "./acode_source/node_modules" ]; then
             rm -rf ./acode_source/node_modules
           fi
-
+ 
       - name: Checkout source repo
         uses: actions/checkout@main
         with:
@@ -40,36 +41,37 @@ jobs:
           ref: main
           path: acode_source
           fetch-depth: 0
-
+          submodules: recursive
+ 
       - name: Checkout ci source repo (self)
         uses: actions/checkout@main
         with:
           path: ci_source
-
+ 
       - name: Initialization values
         run: |
           # 先获取当前commit信息
           echo "GIT_COMMIT=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
           echo "PREV_TAG=$(git describe --tags --abbrev=0 2>/dev/null || git rev-list --max-parents=0 HEAD)" >> $GITHUB_ENV
           echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
-
+ 
       - name: Fix build-extras.gradle for release build
         run: |
           chmod +x ${{ github.workspace }}/ci_source/scripts/customize-acode.sh
           ${{ github.workspace }}/ci_source/scripts/customize-acode.sh
-
+ 
       - name: Set up jdk 21
         uses: actions/setup-java@main
         with:
           distribution: 'temurin'
           java-version: '21'
           cache: 'gradle'
-
+ 
       - name: Set up node.js
         uses: actions/setup-node@main
         with:
           node-version: 'lts/*'
-
+ 
       # app-release.keystore和build.json的路径都在构建文件中被硬编码了
       # "/tmp/app-release.keystore" 和 "/build.json"
       - name: Add keystore and build.json from secrets
@@ -83,7 +85,7 @@ jobs:
             echo "Keystore password verification failed!"
             exit 1
           }
-
+ 
       - name: Replace config.js with secured version
         working-directory: ./acode_source
         run: |
@@ -117,7 +119,7 @@ jobs:
           ls -la utils/config.js
           echo "文件行数: $(wc -l < utils/config.js)"
           echo "✓ utils/config.js 文件替换完成"
-
+ 
       - name: Extract versionCode and version from config.xml
         id: extract_version
         working-directory: ./acode_source
@@ -132,7 +134,7 @@ jobs:
           echo "VERSION=$VERSION" >> $GITHUB_OUTPUT
           echo "Extracted Version Code: $VERSION_CODE"
           echo "Extracted Version: $VERSION"
-
+ 
       - name: Append commit hash to version and update config.xml
         id: update-version
         working-directory: ./acode_source
@@ -152,25 +154,30 @@ jobs:
           # Output the updated version
           echo "UPDATED_VERSION=$UPDATED_VERSION" >> $GITHUB_ENV
           echo "UPDATED_VERSION=$UPDATED_VERSION" >> $GITHUB_OUTPUT
-
+ 
+      - name: Install bun
+        uses: oven-sh/setup-bun@main
+        with:
+          bun-version: latest
+ 
       - name: Install node.js packages
         working-directory: ./acode_source
         run: npm install
-
+ 
       - name: Install cordova cli
         working-directory: ./acode_source
         run: npm install -g cordova
-
+ 
       - name: Run npm setup
         working-directory: ./acode_source
         run: npm run setup
-
+ 
       - name: Run npm build paid apk
         working-directory: ./acode_source
         run: |
           node utils/storage_manager.mjs y
           npm run build paid apk
-
+ 
       - name: Build release apk files with gradle
         working-directory: ./acode_source
         run: |
@@ -201,7 +208,7 @@ jobs:
           fi
           # 验证APK文件存在
           ls -la "${{ github.workspace }}/dist/acode-unsigned.apk" || echo "APK file not found!"
-
+ 
       - name: Sign the apk (pkcs12)
         working-directory: ./acode_source
         run: |
@@ -221,8 +228,7 @@ jobs:
             "${{ github.workspace }}/dist/acode-unsigned.apk"
           # 验证签名
           apksigner verify --verbose "${{ github.workspace }}/dist/acode-${{ env.BUILD_DATE }}.apk"
-
-
+ 
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
