--- a/.github/workflows/build-apk-acode.yml
+++ b/.github/workflows/build-apk-acode.yml
@@ -68,55 +68,27 @@ jobs:
       - name: Set up node.js
         uses: actions/setup-node@main
         with:
-          node-version: 'lts/*'
+          node-version: ''
+          check-latest: true
  
-      # app-release.keystore和build.json的路径都在构建文件中被硬编码了
-      # "/tmp/app-release.keystore" 和 "/build.json"
+      # app-release.keystore和build.json的路径都在构建文件中被硬编码
       - name: Add keystore and build.json from secrets
         run: |
           mkdir -p /tmp
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > "${{ env.STORE_FILE_PATH }}"
           echo "${{ secrets.ACODE_BUILD_JSON_CONTENT_BASE64 }}" | base64 -d > "${{ env.BUILD_JSON_PATH }}"
           echo "Keystore and build.json added successfully."
-          # 验证keystore密码
-          keytool -list -keystore "${{ env.STORE_FILE_PATH }}" -storepass "${{ env.KEYSTORE_PASSWORD }}" -v || {
-            echo "Keystore password verification failed!"
-            exit 1
-          }
  
       - name: Replace config.js with secured version
         working-directory: ./acode_source
         run: |
           echo "正在替换 utils/config.js 文件..."
-          # 确保utils目录存在
-          if [ ! -d "utils" ]; then
-            mkdir -p utils
-            echo "创建了 utils 目录"
-          fi
           # 从secrets中获取base64编码的config.js内容并解码
           if [ -z "${{ secrets.ACODE_BUILD_CONFIGJS_BASE64 }}" ]; then
             echo "错误: ACODE_BUILD_CONFIGJS_BASE64 secret 为空!"
             exit 1
           fi
           echo "${{ secrets.ACODE_BUILD_CONFIGJS_BASE64 }}" | base64 -d > utils/config.js
-          # 验证文件是否成功写入
-          if [ ! -f "utils/config.js" ]; then
-            echo "错误: 无法创建 utils/config.js 文件!"
-            exit 1
-          fi
-          # 验证文件内容（检查是否是有效的JavaScript）
-          if ! node -c utils/config.js 2>/dev/null; then
-            echo "警告: utils/config.js 不是有效的JavaScript文件"
-            echo "文件内容预览（前10行）:"
-            head -10 utils/config.js
-          else
-            echo "✓ utils/config.js 是有效的JavaScript文件"
-          fi
-          # 显示文件大小和基本信息
-          echo "文件信息:"
-          ls -la utils/config.js
-          echo "文件行数: $(wc -l < utils/config.js)"
-          echo "✓ utils/config.js 文件替换完成"
  
       - name: Install bun
         uses: oven-sh/setup-bun@main
@@ -146,10 +118,6 @@ jobs:
         run: |
           ./gradlew clean
           ./gradlew assembleRelease
-          # 查找生成的APK文件
-          echo "Looking for APK files..."
-          find app/build/outputs/apk -name "*.apk" -type f
-          # 确保目录存在
           mkdir -p "${{ github.workspace }}/dist"
           mv  app/build/outputs/apk/release/app-release-unsigned.apk "${{ github.workspace }}/dist/acode-unsigned.apk"
           
