--- a/.github/workflows/build-apk-shizuku.yml
+++ b/.github/workflows/build-apk-shizuku.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           path: ci_source
 
-      - name: Setup Java
+      - name: Setup java
         uses: actions/setup-java@main
         with:
           distribution: 'temurin'
@@ -48,10 +48,10 @@ jobs:
           echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" > signing.properties
           echo "KEYSTORE_ALIAS=${{ secrets.KEY_ALIAS }}" >> signing.properties
           echo "KEYSTORE_ALIAS_PASSWORD=${{ secrets.KEY_ALIAS_PASSWORD }}" >> signing.properties
-          echo "KEYSTORE_FILE=../key.p12" >> signing.properties
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > ../key.p12
+          echo "KEYSTORE_FILE=key.p12" >> signing.properties
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > key.p12
 
-      - name: Setup Gradle
+      - name: Setup gradle
         uses: gradle/actions/setup-gradle@main
         with:
           dependency-graph: generate-and-submit
@@ -59,7 +59,7 @@ jobs:
           build-scan-terms-of-use-url: "https://gradle.com/terms-of-service"
           build-scan-terms-of-use-agree: "yes"
  
-      - name: Build with Gradle
+      - name: Build with gradle
         working-directory: ./shizuku_source
         id: buildWithGradle
         run: |
@@ -68,6 +68,6 @@ jobs:
           echo 'android.native.buildOutput=verbose' >> gradle.properties
           echo 'org.gradle.caching=true' >> gradle.properties
           echo 'org.gradle.parallel=true' >> gradle.properties
-          ./gradlew :manager:assemble
+          ./gradlew :manager:assembleRelease
           releaseName=`ls manager/build/outputs/apk/release/shizuku*-v*-release.apk | awk -F '(/|-release.apk)' '{print $6}'` && echo "releaseName=$releaseName" >> $GITHUB_OUTPUT
           echo '$releaseName'
