--- a/.github/workflows/build-apk-shizuku.yml
+++ b/.github/workflows/build-apk-shizuku.yml
@@ -48,9 +48,11 @@ jobs:
           echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" > signing.properties
           echo "KEYSTORE_ALIAS=${{ secrets.KEY_ALIAS }}" >> signing.properties
           echo "KEYSTORE_ALIAS_PASSWORD=${{ secrets.KEY_ALIAS_PASSWORD }}" >> signing.properties
-          echo "KEYSTORE_FILE=manager/key.p12" >> signing.properties
-          mkdir -p manager
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > manager/key.p12
+          # echo "KEYSTORE_FILE=manager/key.p12" >> signing.properties
+          # mkdir -p manager
+          # echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > manager/key.p12
+          echo "KEYSTORE_FILE=key.p12" >> signing.properties
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > key.p12
 
       - name: Setup gradle
         uses: gradle/actions/setup-gradle@main
@@ -69,6 +71,9 @@ jobs:
           echo 'android.native.buildOutput=verbose' >> gradle.properties
           echo 'org.gradle.caching=true' >> gradle.properties
           echo 'org.gradle.parallel=true' >> gradle.properties
-          ./gradlew :manager:assembleRelease
-          releaseName=`ls manager/build/outputs/apk/release/shizuku*-v*-release.apk | awk -F '(/|-release.apk)' '{print $6}'` && echo "releaseName=$releaseName" >> $GITHUB_OUTPUT
+          chmod +x ./gradlew
+          # ./gradlew :manager:assembleRelease
+          # releaseName=`ls manager/build/outputs/apk/release/shizuku*-v*-release.apk | awk -F '(/|-release.apk)' '{print $6}'` && echo "releaseName=$releaseName" >> $GITHUB_OUTPUT
+          ./gradlew assembleRelease
+          releaseName=`ls build/outputs/apk/release/shizuku*-v*-release.apk | awk -F '(/|-release.apk)' '{print $6}'` && echo "releaseName=$releaseName" >> $GITHUB_OUTPUT
           echo '$releaseName'
