--- a/.github/workflows/build-apk-shizuku.yml
+++ b/.github/workflows/build-apk-shizuku.yml
@@ -51,8 +51,8 @@ jobs:
           # echo "KEYSTORE_FILE=manager/key.p12" >> signing.properties
           # mkdir -p manager
           # echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > manager/key.p12
-          echo "KEYSTORE_FILE=key.p12" >> signing.properties
-          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > key.p12
+          echo "KEYSTORE_FILE=./key.p12" >> signing.properties
+          echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > ./key.p12
 
       - name: Setup gradle
         uses: gradle/actions/setup-gradle@main
