--- a/.github/workflows/build-apk-shizuku.yml
+++ b/.github/workflows/build-apk-shizuku.yml
@@ -49,7 +49,8 @@ jobs:
           echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" > signing.properties
           echo "KEYSTORE_ALIAS=${{ secrets.KEY_ALIAS }}" >> signing.properties
           echo "KEYSTORE_ALIAS_PASSWORD=${{ secrets.KEY_ALIAS_PASSWORD }}" >> signing.properties
-          echo "KEYSTORE_FILE=key.p12" >> signing.properties
+          # 因build实际是在./manager目录下进行，故为../key.p12
+          echo "KEYSTORE_FILE=../key.p12" >> signing.properties
 
       - name: Setup gradle
         uses: gradle/actions/setup-gradle@main
