--- a/.github/workflows/build-apk-shizuku.yml
+++ b/.github/workflows/build-apk-shizuku.yml
@@ -35,7 +35,11 @@ jobs:
         uses: actions/checkout@main
         with:
           path: ci_source
-
+ 
+      - name: Initialization values
+        run: |
+          echo "BUILD_DATE=$(TZ=UTC-8 date +"%y.%m.%d-%H.%M.%S")" >> $GITHUB_ENV
+ 
       - name: Setup java
         uses: actions/setup-java@main
         with:
