--- a/.github/workflows/build-apk-gkd.yml
+++ b/.github/workflows/build-apk-gkd.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
-          P12_KEYSTORE_PATH: "${{ github.workspace }}/gkd_source/gkd.p12"
+          P12_KEYSTORE_PATH: "./gkd_source/gkd.p12"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
-          BUILD_ARTIFACT_PATH: "${{ github.workspace }}/dist/gkd-${{ env.BUILD_DATE }}.apk"
+          BUILD_ARTIFACT_PATH: "./dist/gkd-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-gkd"
