--- a/.github/workflows/build-apk-amazefilemanager.yml
+++ b/.github/workflows/build-apk-amazefilemanager.yml
@@ -123,7 +123,8 @@ jobs:
           echo 'android.native.buildOutput=verbose' >> gradle.properties
           echo 'org.gradle.caching=true' >> gradle.properties
           echo 'org.gradle.parallel=true' >> gradle.properties
-          ./gradlew assembleRelease --stacktrace
+          # ./gradlew assembleRelease --stacktrace
+          ./gradlew assembleRelease --stacktrace --no-daemon
 
       - name: Rename and move
         working-directory: ./amazefilemanager_source
