--- a/.github/workflows/build-apk-amazefilemanager.yml
+++ b/.github/workflows/build-apk-amazefilemanager.yml
@@ -46,7 +46,8 @@ jobs:
           java-version: '${{ env.JDK_VERSION }}'
 
       - name: Setup ndk
-        uses: nttld/setup-ndk@afb4c9964b521afb97c864b7d40b11e6911bd410
+        # uses: nttld/setup-ndk@afb4c9964b521afb97c864b7d40b11e6911bd410
+        uses: nttld/setup-ndk@main
         with:
           ndk-version: r28c
           link-to-sdk: true
@@ -160,12 +161,7 @@ jobs:
         run: |
           mkdir -p "${{ github.workspace }}/dist"
           apkPath=$(ls app/build/outputs/apk/play/release/app-play-release.apk)
-          if [ -f "$apkPath" ]; then
-            mv "$apkPath" "${{ github.workspace }}/dist/amazefilemanager-${{ env.BUILD_DATE }}.apk"
-          else
-            echo "Play Release APK not found, build may have failed"
-            exit 1
-          fi
+          mv "$apkPath" "${{ github.workspace }}/dist/amazefilemanager-${{ env.BUILD_DATE }}.apk"
 
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
