更新 build-apk-flauncher.yml

--- a/.github/workflows/build-apk-flauncher.yml
+++ b/.github/workflows/build-apk-flauncher.yml
@@ -94,15 +94,21 @@ jobs:
       - name: Rename and move
         working-directory: ./flauncher_source
         run: |
+          echo "Current directory: $(pwd)"
+          echo "OUTPUT_DIR: $OUTPUT_DIR"
           echo "Generated APK files:"
-          ls -la ${{ env.OUTPUT_DIR }}/*.apk
+          ls -la "$OUTPUT_DIR"/*.apk || echo "No APK files found in $OUTPUT_DIR"
           mkdir -p "${{ github.workspace }}/dist"
           sudo apt install rename -y
           # 重命名所有带架构后缀的 APK
-          rename 's/app-(.*)-release.apk/flauncher-$1-release.apk/' ${{ env.OUTPUT_DIR }}/*.apk || true
-          # 移动通用版本到最终文件名
-          # mv ${{ env.OUTPUT_DIR }}/app-release.apk "${{ github.workspace }}/dist/flauncher-${{ env.BUILD_DATE }}.apk"
-
+          rename 's/app-(.*)-release.apk/flauncher-$1-release.apk/' "$OUTPUT_DIR"/*.apk || true
+          ls -la "$OUTPUT_DIR"/*.apk || echo "No APK files found in $OUTPUT_DIR"
+          if [ -f "$OUTPUT_DIR/app-release.apk" ]; then
+            mv "$OUTPUT_DIR/app-release.apk" "${{ github.workspace }}/dist/flauncher-${{ env.BUILD_DATE }}.apk"
+          else
+            echo "Warning: app-release.apk not found, skipping move."
+          fi
+    
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
