--- a/.github/workflows/build-apk-flauncher.yml
+++ b/.github/workflows/build-apk-flauncher.yml
@@ -71,6 +71,21 @@ jobs:
           # 实际为p12，非jks，懒得改构建代码了
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > android/app/upload-keystore.jks
 
+      - name: Patch gradle files for latest flutter version
+        working-directory: ./flauncher_source
+        run: |
+          # 升级 Android Gradle Plugin 版本到 8.1.0
+          sed -i 's/classpath ["'\'']com.android.tools.build:gradle:[0-9.]*["'\'']/classpath "com.android.tools.build:gradle:8.1.0"/' android/build.gradle
+          # 升级 Gradle 版本到 8.10.2
+          sed -i 's|distributionUrl=.*gradle-[0-9.]*-all\.zip|distributionUrl=https\://services.gradle.org/distributions/gradle-8.10.2-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
+          # 如果存在 Kotlin 版本定义，升级到 1.9.20
+          if grep -q 'ext.kotlin_version' android/build.gradle; then
+            sed -i 's/ext.kotlin_version = ["'\'']*[0-9.]*["'\'']*/ext.kotlin_version = "1.9.20"/' android/build.gradle
+          fi
+          echo "Patched Gradle files:"
+          cat android/build.gradle | grep "com.android.tools.build:gradle"
+          cat android/gradle/wrapper/gradle-wrapper.properties | grep "distributionUrl"
+
       - name: Build with flutter
         working-directory: ./flauncher_source
         env:
