--- a/.github/workflows/build-apk-flauncher.yml
+++ b/.github/workflows/build-apk-flauncher.yml
@@ -74,26 +74,32 @@ jobs:
       - name: Patch gradle files for latest flutter version
         working-directory: ./flauncher_source
         run: |
-          set -x  # 启用调试输出
-          if [ ! -f android/build.gradle ]; then
-            echo "错误：找不到 android/build.gradle"
-            exit 1
+          set -x
+          # 1. 升级 AGP 到 8.6.0（Flutter 3.41.2 最低要求）
+          find . -name "build.gradle" -type f -exec perl -i -pe 's/(classpath\s*["'\'']com\.android\.tools\.build:gradle:)\K[0-9.]+/8.6.0/' {} \;
+          # 2. 升级 Gradle 包装器到 8.11.1（兼容 AGP 8.6.0）
+          if [ -f android/gradle/wrapper/gradle-wrapper.properties ]; then
+            sed -i 's|distributionUrl=.*gradle-[0-9.]*-all\.zip|distributionUrl=https\://services.gradle.org/distributions/gradle-8.11.1-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
           fi
-          if [ ! -f android/gradle/wrapper/gradle-wrapper.properties ]; then
-            echo "错误：找不到 android/gradle/wrapper/gradle-wrapper.properties"
-            exit 1
+          # 3. 在 splits.abi 中添加支持的 ABI 列表（防止构建不支持的 ABI）
+          SPLITS_FILE="android/app/build.gradle"
+          if [ -f "$SPLITS_FILE" ]; then
+            # 检查是否已存在 include 行（避免重复插入）
+            if ! grep -q "include.*arm64-v8a" "$SPLITS_FILE"; then
+              # 在 splits.abi 块的 enable 行后插入 include
+              perl -i -pe 'BEGIN{undef $/;} s/(splits\s*\{\s*abi\s*\{.*?enable[^\n]*\n)/$1            include "arm64-v8a", "armeabi-v7a", "x86", "x86_64"\n/s' "$SPLITS_FILE"
+            fi
           fi
-          sed -i 's/classpath ["'\'']com.android.tools.build:gradle:[0-9.]*["'\'']/classpath "com.android.tools.build:gradle:8.1.0"/' android/build.gradle
-          sed -i 's|distributionUrl=.*gradle-[0-9.]*-all\.zip|distributionUrl=https\://services.gradle.org/distributions/gradle-8.10.2-all.zip|' android/gradle/wrapper/gradle-wrapper.properties
-          if grep -q 'ext.kotlin_version' android/build.gradle; then
-            sed -i 's/ext.kotlin_version = ["'\'']*[0-9.]*["'\'']*/ext.kotlin_version = "1.9.20"/' android/build.gradle
-          fi
+          # 4. 如果存在 Kotlin 版本定义，升级到 1.9.20（可选）
+          find . -name "build.gradle" -type f -exec perl -i -pe 's/(ext\.kotlin_version\s*=\s*["'\''])\K[0-9.]+/1.9.20/' {} \;
           echo "Gradle 文件已更新："
           echo "AGP 版本："
-          grep "com.android.tools.build:gradle" android/build.gradle || echo "未找到 AGP 配置"
+          grep -r "com.android.tools.build:gradle" --include="*.gradle" . || echo "未找到 AGP"
           echo "Gradle 包装器版本："
-          grep "distributionUrl" android/gradle/wrapper/gradle-wrapper.properties || echo "未找到 distributionUrl"          cat android/gradle/wrapper/gradle-wrapper.properties | grep "distributionUrl"
-
+          grep "distributionUrl" android/gradle/wrapper/gradle-wrapper.properties
+          echo "ABI splits 配置："
+          grep -A10 "splits" "$SPLITS_FILE" || echo "未找到 splits 配置"
+ 
       - name: Build with flutter
         working-directory: ./flauncher_source
         env:
